recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:4: error: not found: value lenght
avance(lenght)
       ^Spiral:6: error: not found: value setps
	setps=steps-1
        ^Spiral:7: error: reassignment to val
	length=length+increment
              ^